Jann 30/objects/GS1_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Author Profile</label>
        <referenceTo>GS1_AuthorProfile__c</referenceTo>
        <relationshipLabel>Created/Submitted Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BBN_Formula__c</fullName>
        <label>BBN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBN_Short_Dsp__c</fullName>
        <description>updated 2-3-15 -  INC2400385 previous value BBN_Short__c</description>
        <formula>IF( OR(ISNULL(BBN_Formula__c), ISBLANK(BBN_Formula__c)), BBN_Short__c , BBN__r.Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBN Short</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBN_Short__c</fullName>
        <label>BBN Short (Container)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BBN</label>
        <referenceTo>GS1_BBN__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Capacity</label>
        <referenceTo>GS1_Unit_Capacity__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConsumerDespatchUnit__c</fullName>
        <formula>LEFT( Multipack_Type__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C/D</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_per_Layer__c</fullName>
        <formula>IF((Count_per_Pallet__c=0) ||  (Number_of_Layers__c=0),null,Count_per_Pallet__c /  Number_of_Layers__c)</formula>
        <label>Nr. Multipack or DU / Layer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_per_Pallet__c</fullName>
        <label>Nr. Multipack or DU / Pallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>GS1_Country__c</referenceTo>
        <relationshipLabel>Requests for this Country</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_On_Market__c</fullName>
        <label>Date On Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Computed__c</fullName>
        <formula>Trademark__r.Name + &quot; &quot; + 
Flavour__r.Name + &quot; &quot; + 
Capacity__r.Name + &quot; &quot; + 
Unit__r.Name + &quot; &quot; + 
Material__r.Name + &quot; &quot; + 
Design__r.Name + &quot; &quot; + 
Multipack__r.Name + &quot; &quot; + 
Units_Pack__r.Name + &quot; &quot; + 
TEXT(Packs_Case__c) + &quot; &quot; + 
TEXT( Units_Case__c ) + 
IF(Product_Type__c = &quot;Pallet&quot;, &quot; &quot; +  Pallet_Material__r.Name + &quot; &quot; + Pallet_Design__r.Name, &quot;&quot;)</formula>
        <label>Description (comp.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Click the link to generate description</inlineHelpText>
        <label>Description (edit.)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Design</label>
        <referenceTo>GS1_Design__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Request</label>
        <referenceTo>GS1_Request__c</referenceTo>
        <relationshipLabel>Duplicate Requests</relationshipLabel>
        <relationshipName>DuplicateRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EAN_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Barcode</label>
        <referenceTo>GS1_EAN__c</referenceTo>
        <relationshipLabel>Requests Using this barcode</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flavour__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flavour</label>
        <referenceTo>GS1_Flavour__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Short__c</fullName>
        <label>Long/Short</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Material</label>
        <referenceTo>GS1_Material__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multipack_Type__c</fullName>
        <formula>IF (ISPICKVAL(Multipack__r.UnitType__c,&quot;C&quot;),&quot;Consumer Unit&quot;,
IF (ISPICKVAL(Multipack__r.UnitType__c,&quot;D&quot;),&quot;Despatch Unit&quot;, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multipack Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multipack__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Multipack</label>
        <referenceTo>GS1_Multipack__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Layers__c</fullName>
        <label>Nr. Layers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packs_Case__c</fullName>
        <label>Packs/Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Design__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pallet Design</label>
        <referenceTo>GS1_Pallet_Design__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pallet_Material__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pallet Material</label>
        <referenceTo>GS1_Pallet_Material__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <defaultValue>IF (
CONTAINS($RecordType.Name , &quot;Pallet&quot;), &quot;Pallet&quot;,
IF (CONTAINS($RecordType.Name , &quot;CU/DU&quot;), &quot;CU/DU&quot;, null))</defaultValue>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Amount__c</fullName>
        <label>Amount (ex. 5 or 3.23)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Promo Currency</label>
        <referenceTo>GS1_Currency__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Other__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Other</label>
        <referenceTo>GS1_Promo_Other__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Quantity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Type &apos;*free*&apos; to show all items with free</inlineHelpText>
        <label>Additional Free Product</label>
        <referenceTo>GS1_Promo_Free_Product__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_type__c</fullName>
        <defaultValue>IF(CONTAINS( $RecordType.Name , &quot;Amount&quot;), &quot;Amount&quot;,
IF(CONTAINS( $RecordType.Name , &quot;Quantity&quot;), &quot;Quantity&quot;,
IF(CONTAINS( $RecordType.Name , &quot;Other&quot;), &quot;Other&quot;,
NULL)))</defaultValue>
        <label>Promotion type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Date__c</fullName>
        <label>Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <defaultValue>IF (CONTAINS($RecordType.Name , &quot;Normal&quot;), &quot;Normal&quot;, &quot;Promotion&quot;)</defaultValue>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedByUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequestedByUserId (Hidden)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GS1_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <defaultValue>IF ($User.FirstName = &apos;&apos;,&apos;&apos;,$User.FirstName + &apos; &apos;) + $User.LastName</defaultValue>
        <label>Requested By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Units_per_Pallet__c</fullName>
        <formula>Count_per_Pallet__c *  Units_Case__c</formula>
        <label>Single Units / Pallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trademark__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trademark</label>
        <referenceTo>GS1_Trademark__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URLLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Id , IF(Description__c!=&apos;&apos;,Description__c,Description_Computed__c), &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unit</label>
        <referenceTo>GS1_Unit__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units_Case__c</fullName>
        <formula>Packs_Case__c *   VALUE(Units_Pack__r.Name)</formula>
        <label>Units/Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Pack__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Units/Pack</label>
        <referenceTo>GS1_Multipack_Value__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Withdraw_Date__c</fullName>
        <label>Withdraw Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Withdrawn_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Withdrawn By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GS1 Request</label>
    <listViews>
        <fullName>By_Approval_Date</fullName>
        <columns>Approval_Date__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Country__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Request_Type__c</columns>
        <columns>ConsumerDespatchUnit__c</columns>
        <columns>URLLink__c</columns>
        <columns>EAN_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>EAN Allocated</value>
        </filters>
        <filters>
            <field>Sent_Back__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>04 - By Approval Date</label>
    </listViews>
    <listViews>
        <fullName>CU_DU_Normal</fullName>
        <columns>Country__c</columns>
        <columns>URLLink__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>Long_Short__c</columns>
        <columns>ConsumerDespatchUnit__c</columns>
        <columns>Trademark__c</columns>
        <columns>Flavour__c</columns>
        <columns>Unit__c</columns>
        <columns>Capacity__c</columns>
        <columns>Material__c</columns>
        <columns>Design__c</columns>
        <columns>Multipack__c</columns>
        <columns>Units_Pack__c</columns>
        <columns>Packs_Case__c</columns>
        <columns>Units_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>CU/DU</value>
        </filters>
        <filters>
            <field>Sent_Back__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EAN_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>EAN Allocated</value>
        </filters>
        <label>05 - CU/DU Normal</label>
    </listViews>
    <listViews>
        <fullName>CU_DU_Promotion</fullName>
        <columns>Country__c</columns>
        <columns>URLLink__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>Long_Short__c</columns>
        <columns>ConsumerDespatchUnit__c</columns>
        <columns>Trademark__c</columns>
        <columns>Flavour__c</columns>
        <columns>Unit__c</columns>
        <columns>Capacity__c</columns>
        <columns>Material__c</columns>
        <columns>Design__c</columns>
        <columns>Multipack__c</columns>
        <columns>Units_Pack__c</columns>
        <columns>Packs_Case__c</columns>
        <columns>Units_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Promotion</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>CU/DU</value>
        </filters>
        <filters>
            <field>Sent_Back__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EAN_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>EAN Allocated</value>
        </filters>
        <label>06 - CU/DU Promotion</label>
    </listViews>
    <listViews>
        <fullName>Drafts_New</fullName>
        <columns>URLLink__c</columns>
        <columns>Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>10 - Drafts</label>
    </listViews>
    <listViews>
        <fullName>For_Barcode_Allocation</fullName>
        <columns>Requested_By__c</columns>
        <columns>Country__c</columns>
        <columns>URLLink__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested,Approved</value>
        </filters>
        <label>01 - For Barcode Allocation</label>
        <sharedTo>
            <group>GS1_Admin</group>
            <group>GS1_Restricted_View_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pallet_Normal</fullName>
        <columns>Country__c</columns>
        <columns>URLLink__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>Long_Short__c</columns>
        <columns>ConsumerDespatchUnit__c</columns>
        <columns>Trademark__c</columns>
        <columns>Flavour__c</columns>
        <columns>Unit__c</columns>
        <columns>Capacity__c</columns>
        <columns>Material__c</columns>
        <columns>Design__c</columns>
        <columns>Multipack__c</columns>
        <columns>Units_Pack__c</columns>
        <columns>Packs_Case__c</columns>
        <columns>Units_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Pallet</value>
        </filters>
        <filters>
            <field>Sent_Back__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EAN_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>EAN Allocated</value>
        </filters>
        <label>07 - Pallet Normal</label>
    </listViews>
    <listViews>
        <fullName>Pallet_Promotion</fullName>
        <columns>Country__c</columns>
        <columns>URLLink__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>Long_Short__c</columns>
        <columns>ConsumerDespatchUnit__c</columns>
        <columns>Trademark__c</columns>
        <columns>Flavour__c</columns>
        <columns>Unit__c</columns>
        <columns>Capacity__c</columns>
        <columns>Material__c</columns>
        <columns>Design__c</columns>
        <columns>Multipack__c</columns>
        <columns>Units_Pack__c</columns>
        <columns>Packs_Case__c</columns>
        <columns>Units_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Promotion</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Pallet</value>
        </filters>
        <filters>
            <field>Sent_Back__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EAN_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>EAN Allocated</value>
        </filters>
        <label>08 - Pallet Promotion</label>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>URLLink__c</columns>
        <columns>Country__c</columns>
        <columns>Reject_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>13 - Rejected</label>
    </listViews>
    <listViews>
        <fullName>To_Send_Back</fullName>
        <columns>Country__c</columns>
        <columns>URLLink__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Long_Short__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sent_Back__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>EAN_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>EAN Allocated</value>
        </filters>
        <label>02 - To Send Back</label>
        <sharedTo>
            <group>GS1_Admin</group>
            <group>GS1_Restricted_View_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Waiting_Approval</fullName>
        <columns>Country__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Request_Type__c</columns>
        <columns>ConsumerDespatchUnit__c</columns>
        <columns>URLLink__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Requested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>11  - Waiting Approval</label>
    </listViews>
    <listViews>
        <fullName>Withdrawn</fullName>
        <columns>Country__c</columns>
        <columns>Withdraw_Date__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>URLLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Withdrawn</value>
        </filters>
        <label>14 - Withdrawn</label>
        <sharedTo>
            <group>GS1_Admin</group>
            <group>GS1_Restricted_View_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>separator01</fullName>
        <columns>Country__c</columns>
        <columns>Withdraw_Date__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>URLLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>_blank_</value>
        </filters>
        <label>03 -----------------------------------</label>
        <sharedTo>
            <group>GS1_Admin</group>
            <group>GS1_Restricted_View_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>separator02</fullName>
        <columns>Country__c</columns>
        <columns>Withdraw_Date__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>URLLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>_blank_</value>
        </filters>
        <label>09 -----------------------------------</label>
    </listViews>
    <listViews>
        <fullName>separator03</fullName>
        <columns>Country__c</columns>
        <columns>Withdraw_Date__c</columns>
        <columns>EAN_Code__c</columns>
        <columns>URLLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>_blank_</value>
        </filters>
        <label>12 -----------------------------------</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{YYYYMM}-{0000000000}</displayFormat>
        <label>Request Ref #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GS1 Requests</pluralLabel>
    <recordTypes>
        <fullName>CU_DU_Normal</fullName>
        <active>true</active>
        <description>CU/DU Normal Request</description>
        <label>CU/DU - Normal</label>
    </recordTypes>
    <recordTypes>
        <fullName>CU_DU_Promotion_Amount</fullName>
        <active>true</active>
        <description>CU/DU Promotion request which promo type is amount</description>
        <label>CU/DU - Promotion - Amount</label>
    </recordTypes>
    <recordTypes>
        <fullName>CU_DU_Promotion_Other</fullName>
        <active>true</active>
        <description>CU/DU Promotion request which promo type is other</description>
        <label>CU/DU - Promotion - Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>CU_DU_Promotion_Quantity</fullName>
        <active>true</active>
        <description>CU/DU Promotion request which promo type is quantity</description>
        <label>CU/DU - Promotion - Quantity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pallet_Normal</fullName>
        <active>true</active>
        <description>Pallet Normal Request</description>
        <label>Pallet - Normal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pallet_Promotion_Amount</fullName>
        <active>true</active>
        <description>Pallet Promotion request which promo type is amount</description>
        <label>Pallet - Promotion - Amount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pallet_Promotion_Other</fullName>
        <active>true</active>
        <description>Pallet Promotion request which promo type is other</description>
        <label>Pallet - Promotion - Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pallet_Promotion_Quantity</fullName>
        <active>true</active>
        <description>Pallet Promotion request which promo type is quantity</description>
        <label>Pallet - Promotion - Quantity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CountryUser__c</fullName>
        <label>Country User</label>
    </sharingReasons>
</CustomObject>